Recreating bp-native from scratch with a proper git ignore file in place

--- a/.gitignore
+++ b/.gitignore
@@ -44,10 +44,13 @@ Debug/
 /src/platform/server/build/
 
 # NetBeans
+dist/
+build/
+private/
+!private/project.xml
+!private/project.properties
 *.log
 *.dll
-HSQLDBFile*
+HSQLDBFile*.*
 *.mf
-*.script
-build.xml
 *.lck
