--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="..\..\..\..\..\core\GameButton.h" />
     <ClInclude Include="..\..\..\..\..\core\GameConstants.h" />
     <ClInclude Include="..\..\..\..\..\core\GameEvent.h" />
+    <ClInclude Include="..\..\..\..\..\core\GameListener.h" />
     <ClInclude Include="..\..\..\..\..\core\GameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\GameScreen.h" />
     <ClInclude Include="..\..\..\..\..\core\GameSession.h" />
@@ -187,6 +188,7 @@
     <ClInclude Include="..\..\..\..\..\core\PowerUp.h" />
     <ClInclude Include="..\..\..\..\..\core\Rectangle.h" />
     <ClInclude Include="..\..\..\..\..\core\Renderer.h" />
+    <ClInclude Include="..\..\..\..\..\core\ResourceConstants.h" />
     <ClInclude Include="..\..\..\..\..\core\TextureRegion.h" />
     <ClInclude Include="..\..\..\..\..\core\TouchEvent.h" />
     <ClInclude Include="..\..\..\..\..\core\Triangle.h" />
@@ -218,6 +220,7 @@
     <ClCompile Include="..\..\..\..\..\core\Explosion.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Font.cpp" />
     <ClCompile Include="..\..\..\..\..\core\GameButton.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\GameListener.cpp" />
     <ClCompile Include="..\..\..\..\..\core\GameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\GameScreen.cpp" />
     <ClCompile Include="..\..\..\..\..\core\GameSession.cpp" />
