Making necessary WP8 changes , but for some reason the alpha wasn't carried over into the dds file, so Mikel will have to export a proper dd

--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
@@ -146,7 +146,7 @@
     <Content Include="Assets\bg_temp.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\blue_char.dds">
+    <Content Include="Assets\char_blue.dds">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\death.wav">
