Adding new Main Menu bg graphic

--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
@@ -143,9 +143,7 @@
     <Content Include="Assets\bg_game.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\bg_temp.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Assets\bg_main.png" />
     <Content Include="Assets\char_blue.dds">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
