--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="..\..\..\..\..\core\MapBorderType.h" />
     <ClInclude Include="..\..\..\..\..\core\OverlapTester.h" />
     <ClInclude Include="..\..\..\..\..\core\pch.h" />
+    <ClInclude Include="..\..\..\..\..\core\PlayerActionState.h" />
     <ClInclude Include="..\..\..\..\..\core\PlayerDynamicGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\PowerUp.h" />
     <ClInclude Include="..\..\..\..\..\core\Rectangle.h" />
