--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
@@ -144,6 +144,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\bg_main.png" />
+    <Content Include="Assets\bot_blue.dds" />
     <Content Include="Assets\char_black.dds">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
