Different colored bots

--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/BomberParty.csproj
@@ -141,7 +141,30 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\bg_main.png" />
-    <Content Include="Assets\bot_blue.dds" />
+    <Content Include="Assets\bot_black.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_blue.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_green.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_orange.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_pink.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_red.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_white.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\bot_yellow.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\char_black.dds">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
