Updating WP8 graphics and getting the solution to build after recent Mini-map changes; the next step is to actually render the mini-map!

--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberPartyComp/BomberPartyComp.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="..\..\..\..\..\core\MapBorder.h" />
     <ClInclude Include="..\..\..\..\..\core\MapBorderType.h" />
     <ClInclude Include="..\..\..\..\..\core\MapSearchNode.h" />
+    <ClInclude Include="..\..\..\..\..\core\MiniMapGridType.h" />
     <ClInclude Include="..\..\..\..\..\core\Node.h" />
     <ClInclude Include="..\..\..\..\..\core\OverlapTester.h" />
     <ClInclude Include="..\..\..\..\..\core\PathFinder.h" />
