renaming server projects/code to battle-bombs

--- a/src/platform/server/nbproject/project.properties
+++ b/src/platform/server/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/bomber-party.jar
+dist.jar=${dist.dir}/battle-bombs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AppWarpApacheMina.jar=libs\\AppWarpApacheMina.jar
@@ -80,7 +80,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.technegames.bomberparty.Main
+main.class=com.technegames.battlebombs.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
