All 3 versions are on par with each other now

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,12 @@ libpng/
 rapidjson/
 !rapidjson/rapidjson_readme.txt
 
+# Newtonsoft.Json, Windows Phone Toolkit
+packages/
+
+# Windows Phone Toolkit
+Toolkit.Content/
+
 # Eclipse
 bin/
 gen/
