--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="..\..\..\..\..\core\PlayerForceFieldState.h" />
     <ClInclude Include="..\..\..\..\..\core\PowerUp.h" />
     <ClInclude Include="..\..\..\..\..\core\PowerUpBarItem.h" />
+    <ClInclude Include="..\..\..\..\..\core\PowerUpType.h" />
     <ClInclude Include="..\..\..\..\..\core\Rectangle.h" />
     <ClInclude Include="..\..\..\..\..\core\Renderer.h" />
     <ClInclude Include="..\..\..\..\..\core\ResourceConstants.h" />
@@ -218,6 +219,8 @@
     <ClInclude Include="..\..\..\..\..\core\TouchEvent.h" />
     <ClInclude Include="..\..\..\..\..\core\Triangle.h" />
     <ClInclude Include="..\..\..\..\..\core\Vector2D.h" />
+    <ClInclude Include="..\..\..\..\..\core\WaitingForLocalSettingsInterface.h" />
+    <ClInclude Include="..\..\..\..\..\core\WaitingForServerInterface.h" />
     <ClInclude Include="BasicTimer.h" />
     <ClInclude Include="Direct3DAssets.h" />
     <ClInclude Include="Direct3DBase.h" />
@@ -271,6 +274,8 @@
     <ClCompile Include="..\..\..\..\..\core\TouchEvent.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Triangle.cpp" />
     <ClCompile Include="..\..\..\..\..\core\Vector2D.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\WaitingForLocalSettingsInterface.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\WaitingForServerInterface.cpp" />
     <ClCompile Include="Direct3DAssets.cpp" />
     <ClCompile Include="Direct3DBase.cpp" />
     <ClCompile Include="Direct3DContentProvider.cpp" />
